# zim-tools

./: meson.build
src/: meson.build  tools.cpp  tools.h  zimrecreate.cpp
src/zimcheck/: checks.cpp  checks.h  main.cpp  meson.build  zimcheck.cpp
src/zimwriterfs/: zimwriterfs.cpp
test/: zimcheck-test.cpp
